--- a/web/html/component/aTableSortable.html
+++ b/web/html/component/aTableSortable.html
@@ -226,7 +226,7 @@
 
   .ant-table-is-sorting .dragging {
     opacity: 1;
-    box-shadow: 1px -2px 2px #008771;
+    box-shadow: 1px -2px 2px #1990FF;
     transition: all 0.2s;
   }
 
