fix: 调整通知栏样式

--- a/web/html/component/aHeader.html
+++ b/web/html/component/aHeader.html
@@ -21,8 +21,8 @@
         flex: 1;
         overflow: hidden;
         text-overflow: ellipsis;
-        white-space: nowrap;
-        margin-right: 20px;
+        line-height: 15px;
+        margin-right: 10px;
         color: inherit;
         font-size: 14px;
     }
